--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
         <style>
             body {
                 overflow: vertical;
+                padding-top: 50px;
             }
 
             canvas {
@@ -35,7 +36,7 @@
     <body>
         <div id="particles-js"></div>
 
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
             <a class="navbar-brand" href="index.html">Contrail</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
