Added responsive design

--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
         <script src="lib/jquery/jquery-3.4.1.min.js"></script>
         <script src="lib/bootstrap-4.4.1/js/bootstrap.min.js"></script>
         <link rel="stylesheet" href="lib/bootstrap-4.4.1/css/bootstrap.min.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <style>
             body {
                 overflow: vertical;
@@ -17,13 +18,11 @@
             }
 
             .jumbotron-extension {
-                position: relative;
                 background-color: rgba(236, 249, 255, 0.6);
             }
 
             .contents {
                 background-color: rgba(252, 252, 255, 0.8);
-                max-width: 50vw;
                 border: 0.5px solid rgb(57, 176, 255);
             }
 
