Increased loading speed * Compressed images * Put CSS codes into a file

--- a/programs.html
+++ b/programs.html
@@ -5,6 +5,7 @@
         <script src="lib/jquery/jquery-3.4.1.min.js"></script>
         <script src="lib/bootstrap-4.4.1/js/bootstrap.min.js"></script>
         <link rel="stylesheet" href="lib/bootstrap-4.4.1/css/bootstrap.min.css">
+        <link rel="stylesheet" href="css/style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <style>
             body {
@@ -68,7 +69,7 @@
         <div class="container jumbotron contents">
           <div class="card" style="width: 100%;">
             <div class="card-header card-title"><h1 class="display-5"><a href="https://github.com/StellaContrail/wave-function">Quantum Physics Simulations</a></h1></div>
-            <img src="img/gpe.png" class="card-img-top" alt="superfluid" style="max-width: 640px;">
+            <img src="img/gpe.png" class="card-img-top" alt="superfluid">
             <div class="card-body">
               <h5 class="card-title">Superfluid</h5>
               <p class="card-text">Superfluid is fluid without friction.</p>
@@ -77,7 +78,7 @@
 
             <hr>
 
-            <img src="img/tunneling.gif" class="card-img-top" alt="tunneling effect animation" style="max-width: 640px;">
+            <img src="img/tunneling.gif" class="card-img-top" alt="tunneling effect animation">
             <div class="card-body">
               <h5 class="card-title">Tunneling Effect</h5>
               <p class="card-text">Do you have an experience of throwing a ball against wall and watching it bounces back?</p>
@@ -86,7 +87,7 @@
 
             <hr>
 
-            <img src="img/208Pb_density.svg" class="card-img-top" alt="density distribution of nucleons in Pb" style="max-width: 640px;">
+            <img src="img/208Pb_density.svg" class="card-img-top" alt="density distribution of nucleons in Pb">
             <div class="card-body">
               <h5 class="card-title">Density Distribution inside a Pb Nucleus</h5>
               <p class="card-text">How do you put toys back into a box?</p>
@@ -98,7 +99,7 @@
 
           <div class="card" style="width: 100%;">
             <div class="card-header card-title"><h1 class="display-5"><a href="https://github.com/StellaContrail/doublependulum">Double Pendulum</a></h1></div>
-            <img src="img/chaos.png" class="card-img-top" alt="double pendulum" style="max-width: 640px;">
+            <img src="img/chaos.png" class="card-img-top" alt="double pendulum">
             <div class="card-body">
               <h5 class="card-title">Butterfly Effect</h5>
               <p class="card-text">Small changes would cause unexpected big outcomes. This "Double Pendulum" is a nice example.</p>
@@ -109,7 +110,7 @@
 
           <div class="card" style="width: 100%;">
             <div class="card-header card-title"><h1 class="display-5">Wave Dynamics</h1></div>
-            <img src="img/wave.gif" class="card-img-top" alt="double pendulum" style="max-width: 640px;">
+            <img src="img/wave.gif" class="card-img-top" alt="double pendulum">
             <div class="card-body">
               <h5 class="card-title">Wave</h5>
               <p class="card-text">An equation known as "Navier-Stokes Equation" can describe wave dynamics pretty well.</p>
@@ -121,7 +122,7 @@
 
           <div class="card" style="width: 100%;">
             <div class="card-header card-title"><h1 class="display-5"><a href="https://github.com/StellaContrail/IsingModel" alt="isingmodel">Ising model</a></h1></div>
-            <img src="img/magnet.png" class="card-img-top" alt="magnetization" style="max-width: 640px;">
+            <img src="img/magnet.png" class="card-img-top" alt="magnetization">
             <div class="card-body">
               <h5 class="card-title">Simulations to predict material properties</h5>
               <p class="card-text">"Fe", also known as "Iron" is really sensitive to magnetic force.</p>
@@ -133,8 +134,8 @@
 
           <div class="card" style="width: 100%;">
             <div class="card-header card-title"><h1 class="display-5"><a href="https://github.com/StellaContrail/Quon" alt="quon">QM Library for C++</a></h1></div>
-            <img src="img/quon.png" class="card-img-top" alt="quon" style="max-width: 640px;">
-            <img src="img/quon_code.png" class="card-img-top" alt="quon" style=" margin-left: 25px; max-width: 599px;">
+            <img src="img/quon.png" class="card-img-top" alt="quon">
+            <img src="img/quon_code.png" class="card-img-top" alt="quon" style="margin-left: 25px; max-width: 599px;">
             <div class="card-body">
               <h5 class="card-title">Fast, and Simple</h5>
               <p class="card-text">This is self-made C++ library written up only for my own research.</p>
@@ -146,7 +147,7 @@
 
           <div class="card" style="width: 100%;">
             <div class="card-header card-title"><h1 class="display-5"><a href="https://github.com/StellaContrail/Amazon-Price-Recorder" alt="Amazon Price Recorder">Amazon Price Recorder</a></h1></div>
-            <img src="img/amazon.png" class="card-img-top" alt="amazon" style="max-width: 640px;">
+            <img src="img/amazon.png" class="card-img-top" alt="amazon">
             <div class="card-body">
               <h5 class="card-title">Watchdog for your fav products</h5>
               <p class="card-text">Checks price and stock changes. Notify user when needed.</p>
@@ -158,7 +159,7 @@
 
           <div class="card" style="width: 100%;">
             <div class="card-header card-title"><h1 class="display-5"><a href="https://github.com/StellaContrail/comiket-participants-finder" alt="Comiket">Comiket participants listing tool</a></h1></div>
-            <img src="img/comiket.png" class="card-img-top" alt="comiket" style="max-width: 640px;">
+            <img src="img/comiket.png" class="card-img-top" alt="comiket">
             <div class="card-body">
               <h5 class="card-title">Comiket Participants Finder</h5>
               <p class="card-text">Checks user's Twitter followings and finds all Comiket participants.</p>
@@ -170,7 +171,7 @@
 
           <div class="card" style="width: 100%;">
             <div class="card-header card-title"><h1 class="display-5"><a href="https://github.com/StellaContrail/beatstream-like-game" alt="oto game">Music Game made with Unity</a></h1></div>
-            <img src="img/beatstream.gif" class="card-img-top" alt="oto game" style="max-width: 640px;">
+            <img src="img/beatstream.gif" class="card-img-top" alt="oto game">
             <div class="card-body">
               <h5 class="card-title">BeatStream-Like Game</h5>
               <p class="card-text">Music game with BeatStream-like system.</p>
