--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
         <script src="lib/jquery/jquery-3.4.1.min.js"></script>
         <script src="lib/bootstrap-4.4.1/js/bootstrap.min.js"></script>
         <link rel="stylesheet" href="lib/bootstrap-4.4.1/css/bootstrap.min.css">
+        <link rel="stylesheet" href="css/style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <style>
             body {
