--- a/index.html
+++ b/index.html
@@ -4,29 +4,8 @@
         <title>Portfolio</title>
         <script src="lib/jquery/jquery-3.4.1.min.js"></script>
         <script src="lib/bootstrap-4.4.1/js/bootstrap.min.js"></script>
+        <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="lib/bootstrap-4.4.1/css/bootstrap.min.css">
-        <style>
-            body {
-                overflow: hidden;
-            }
-
-            canvas {
-                position: fixed;
-                z-index: -1;
-            }
-
-            .jumbotron-extension {
-                position: relative;
-                top: 10vh;
-                height: 80vh;
-                background-color: rgba(236, 249, 255, 0.6);
-            }
-            
-            .title {
-                position: relative;
-                top: 50%;
-            }
-        </style>
     </head>
     <body>
         <div id="particles-js"></div>
