--- a/profile.html
+++ b/profile.html
@@ -5,32 +5,8 @@
         <script src="lib/jquery/jquery-3.4.1.min.js"></script>
         <script src="lib/bootstrap-4.4.1/js/bootstrap.min.js"></script>
         <link rel="stylesheet" href="lib/bootstrap-4.4.1/css/bootstrap.min.css">
+        <link rel="stylesheet" href="css/style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <style>
-            body {
-                overflow: vertical;
-                padding-top: 50px;
-            }
-
-            canvas {
-                position: fixed;
-                z-index: -1;
-            }
-
-            .jumbotron-extension {
-                background-color: rgba(236, 249, 255, 0.6);
-            }
-
-            .contents {
-                background-color: rgba(252, 252, 255, 0.8);
-                border: 0.5px solid rgb(57, 176, 255);
-            }
-
-            .image {
-                width: 100%;
-                border: 1px solid rgb(236, 236, 236);
-            }
-        </style>
     </head>
     <body>
         <div id="particles-js"></div>
@@ -70,8 +46,8 @@
             <p class="lead">
                 I'm a graduated student studying Numerical Simulation (Physics).
             </p>
-            <div class="container" style="text-align: center;">
-                <img src="img/superfluid.gif" class="image">
+            <div class="container text-center">
+                <img src="img/superfluid.gif">
                 <p class="text-muted">Simulation of Stirred Superfluid</p>
             </div>
             <br>
