Fixed stylesheet error in top page * Jumbotron's height was not specified.

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
         <title>Portfolio</title>
         <script src="lib/jquery/jquery-3.4.1.min.js"></script>
         <script src="lib/bootstrap-4.4.1/js/bootstrap.min.js"></script>
-        <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="lib/bootstrap-4.4.1/css/bootstrap.min.css">
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         <div id="particles-js"></div>
-        <div class="jumbotron jumbotron-extension">
+        <div class="jumbotron jumbotron-top">
             <div class="container title">
               <h1 class="display-3">Contrail</h1>
               <p class="lead">Grad Student studying Physics & Mathematics.</p>
