Fixed a responsive bug for images

--- a/profile.html
+++ b/profile.html
@@ -47,7 +47,7 @@
                 I'm a graduated student studying Numerical Simulation (Physics).
             </p>
             <div class="container text-center">
-                <img src="img/superfluid.gif">
+                <img src="img/superfluid.gif" class="img-fluid">
                 <p class="text-muted">Simulation of Stirred Superfluid</p>
             </div>
             <br>
