--- a/profile.html
+++ b/profile.html
@@ -54,7 +54,7 @@
             <h1 class="display-5">Languages?</h1>
             <p class="lead">
                 I've been in love with C# for almost a decade.
-                Descent experience with C/C++/Fortran/VB/Javascript/Python as well.
+                Decent experience with C/C++/Fortran/VB/Javascript/Python as well.
             </p>
             <p class="lead">
                 I speak Japanese, English, and a little bit of Germany.
