Added design to experiment programs page

--- a/memo.html
+++ b/memo.html
@@ -24,6 +24,9 @@
                 <li class="nav-item">
                   <a class="nav-link" href="programs.html">Programs</a>
                 </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="experiments/index.html">Experiments</a>
+                </li>
                 <li class="nav-item active">
                   <a class="nav-link" href="memo.html">備忘録</a>
                 </li>
@@ -37,7 +40,7 @@
         <div class="jumbotron jumbotron-extension">
             <div class="container">
               <h1 class="display-4">備忘録</h1>
-              <p class="lead">またつまらない物を記してしまった...</p>
+              <p class="lead">Before taking three steps to forget...</p>
             </div>
         </div>
 
