--- a/profile.html
+++ b/profile.html
@@ -25,6 +25,9 @@
                   <a class="nav-link" href="programs.html">Programs</a>
                 </li>
                 <li class="nav-item">
+                  <a class="nav-link" href="experiments/index.html">Experiments</a>
+                </li>
+                <li class="nav-item">
                   <a class="nav-link" href="memo.html">備忘録</a>
                 </li>
                 <li class="nav-item">
@@ -37,27 +40,32 @@
         <div class="jumbotron jumbotron-extension">
             <div class="container">
               <h1 class="display-4">Profile</h1>
-              <p class="lead">about his profile</p>
+              <p class="lead">what is this dude even doing for life</p>
             </div>
         </div>
 
         <div class="container jumbotron contents">
-            <h1 class="display-5">Who are you?</h1>
+            <h1 class="display-5">Who is this guy?</h1>
             <p class="lead">
-                I'm a graduated student studying Numerical Simulation (Physics).
+                A graduated student studying Numerical Simulation (Physics)
+                <br>
+                Researching in how superfluid behaves by simulating its dynamics
             </p>
             <div class="container text-center">
                 <img src="img/superfluid.gif" class="img-fluid">
                 <p class="text-muted">Simulation of Stirred Superfluid</p>
             </div>
             <br>
-            <h1 class="display-5">Languages?</h1>
+            <h1 class="display-5">Programming Skill?</h1>
             <p class="lead">
                 I've been in love with C# for almost a decade.
+                <br>
                 Decent experience with C/C++/Fortran/VB/Javascript/Python as well.
             </p>
+            <br>
+            <h1 class="display-5">Languages?</h1>
             <p class="lead">
-                I speak Japanese, English, and a little bit of Germany.
+                Japanese, English, and a little bit of Germany.
             </p>
         </div>
         <script src="lib/particlejs/particles.js"></script>
