--- a/contact.html
+++ b/contact.html
@@ -25,6 +25,9 @@
                   <a class="nav-link" href="programs.html">Programs</a>
                 </li>
                 <li class="nav-item">
+                  <a class="nav-link" href="experiments/index.html">Experiments</a>
+                </li>
+                <li class="nav-item">
                   <a class="nav-link" href="memo.html">備忘録</a>
                 </li>
                 <li class="nav-item active">
@@ -37,7 +40,7 @@
         <div class="jumbotron jumbotron-extension">
             <div class="container">
               <h1 class="display-4">Contact</h1>
-              <p class="lead">I've made contact form so that you don't have to yell into my ear</p>
+              <p class="lead">So that you don't have to yell into my ear</p>
             </div>
         </div>
 
