--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
                   <a class="nav-link" href="programs.html">Programs</a>
                 </li>
                 <li class="nav-item">
+                  <a class="nav-link" href="experiments/index.html">Experiments</a>
+                </li>
+                <li class="nav-item">
                   <a class="nav-link" href="memo.html">備忘録</a>
                 </li>
                 <li class="nav-item">
