--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     </head>
     <body>
         <div id="particles-js"></div>
-        <div class="jumbotron jumbotron-top">
-            <div class="container title">
+
+        <div style="position: relative; background-color: rgba(255, 255, 255, 0.781); height: 87vh; border-bottom: solid 0.5px rgba(77, 77, 77, 0.1);">
+            <div class="title">
               <h1 class="display-3">Contrail</h1>
               <p class="lead">Grad Student studying Physics & Mathematics.</p>
               <ul class="nav justify-content-start">
@@ -26,12 +27,10 @@
                 <li class="nav-item">
                   <a class="nav-link" href="memo.html">備忘録</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Contact</a>
-                </li>
               </ul>
             </div>
         </div>
+
         <script src="lib/particlejs/particles.js"></script>
         <script src="lib/particlejs/app.js"></script>
     </body>
