--- a/experiments/brownian_motion/index.html
+++ b/experiments/brownian_motion/index.html
@@ -11,11 +11,11 @@
         <link rel="stylesheet" href="../../lib/bootstrap-4.4.1/css/bootstrap.min.css">
         <script>
             // Constant Values
-            const gamma = 0.06;
+            var gamma = 0.06;
             const D = 1;
             const dt = 0.1;
             const X0 = 4.0;
-            const layout = {
+            var layout = {
                 height: 600,
                 title: "Brownian motion (γ="+gamma+", D="+D+", X0="+X0+")",
                 xaxis: {
@@ -24,7 +24,16 @@
                 },
                 yaxis: {
                     title: {text: "X"},
-                    range: [-4, 4]
+                    range: [-6, 6]
+                }
+            };
+            var config = {
+                toImageButtonOptions: {
+                    format: 'svg',
+                    filename: 'BrownianMotion_D' + D + '_X0' + X0 + '_gamma' + gamma,
+                    height: 500,
+                    width: 800,
+                    scale: 1
                 }
             };
 
@@ -35,6 +44,9 @@
             // Start plotting
             var timer;
             function start() {
+                gamma = document.getElementById("gammaVal").value;
+                layout["title"] = "Brownian motion (γ="+gamma+", D="+D+", X0="+X0+")";
+                config["filename"] = 'BrownianMotion_D' + D + '_X0' + X0 + '_gamma' + gamma;
                 timer = setInterval("calculate()", 10);
             }
 
@@ -65,11 +77,11 @@
                     X_new = X(X_temp);
                     X_temp = X_new;
                 } else {
-                    X_new = X(X0);
+                    X_new = X0;
                     X_temp = X_new;
                 }
                 t.push(dt * x.length);
-                x.push(X_new);
+                x.push(X_temp);
                 plot();
                 //autorange();
 
@@ -82,12 +94,12 @@
             function X(X_old) {
                 W = Math.sqrt(-2*Math.log(Math.random())) * Math.sin(2*Math.PI*Math.random());
                 W = Math.sqrt(D*dt)*W;
-                return (1-gamma)*X_old + W;
+                return (1.0-gamma*dt)*X_old + W;
             }
 
             // Plot
             function plot() {
-                Plotly.newPlot( "graph", [{x:t, y:x}], layout );
+                Plotly.newPlot( "graph", [{x:t, y:x}], layout, config );
             }
         </script>
     </head>
@@ -104,8 +116,9 @@
                 <div class="row">
                     <div class="col text-center">
                         <div id="graph" style="border: 1px solid lightgray;"></div>
-                        <input type="button" onclick="stop()" value="Stop">
+                        \(\gamma:\) <input type="number" value="0.06" id="gammaVal">
                         <input type="button" onclick="rerun()" value="Rerun">
+                        <input type="button" onclick="stop()" value="Stop">
                     </div>
                 </div>
             </div>
