--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html lang="ja">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>Portfolio</title>
         <script src="lib/jquery/jquery-3.4.1.min.js"></script>
         <script src="lib/bootstrap-4.4.1/js/bootstrap.min.js"></script>
@@ -10,25 +11,26 @@
     <body>
         <div id="particles-js"></div>
 
-        <div style="position: relative; background-color: rgba(255, 255, 255, 0.781); height: 87vh; border-bottom: solid 0.5px rgba(77, 77, 77, 0.1);">
-            <div class="title">
-              <h1 class="display-3">Contrail</h1>
-              <p class="lead">Grad Student studying Physics & Mathematics.</p>
-              <ul class="nav justify-content-start">
-                <li class="nav-item">
-                  <a class="nav-link" href="profile.html">Profile</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="programs.html">Programs</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="experiments/index.html">Experiments</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="memo.html">備忘録</a>
-                </li>
-              </ul>
-            </div>
+        <div class="h-75 d-flex justify-content-center align-items-end" style="background-color: rgba(255, 255, 255, 0.781); border-bottom: solid 0.5px rgba(77, 77, 77, 0.1);">
+          <div class="ml-5 mr-5 mb-5">
+            <h1 class="display-3">Contrail</h1>
+            <p class="lead mb-4">Grad Student studying Physics & Mathematics.</p>
+            <ul class="nav justify-content-start">
+              <li class="nav-item">
+                <a class="nav-link" href="profile.html">Profile</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="programs.html">Programs</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="experiments/index.html">Experiments</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="memo.html">備忘録</a>
+              </li>
+            </ul>
+          </div>
+          <div style="width: 35vw;"></div>  
         </div>
 
         <script src="lib/particlejs/particles.js"></script>
