--- a/memo/20200710.html
+++ b/memo/20200710.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>20200710</title>
         <link rel="stylesheet" href="https://latex.now.sh/style.min.css" />
         <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
