--- a/profile.html
+++ b/profile.html
@@ -54,7 +54,10 @@
               </div>
               
               <figure style="text-align: right; color: rgb(75, 75, 75);">
-                <img src="img/wave.gif" class="img-fluid">
+                <video controls autoplay="true" class="img-fluid">
+                  <source src="img/wave.webm" type="video/webm">
+                  Sorry, your browser doesn't support embedded videos.
+                </video>
                 <figcaption class="mr-5">
                   (fig. 3D Wave Dynamics)
                 </figcaption>
