Changed wave display mechanics

--- a/profile.html
+++ b/profile.html
@@ -56,7 +56,7 @@
               <figure style="text-align: right; color: rgb(75, 75, 75);">
                 <video controls autoplay="true" class="img-fluid">
                   <source src="img/wave.webm" type="video/webm">
-                  Sorry, your browser doesn't support embedded videos.
+                  <img src="img/wave.gif" class="img-fluid">
                 </video>
                 <figcaption class="mr-5">
                   (fig. 3D Wave Dynamics)
