--- a/profile.html
+++ b/profile.html
@@ -54,9 +54,8 @@
               </div>
               
               <figure style="text-align: right; color: rgb(75, 75, 75);">
-                <video controls autoplay="true" class="img-fluid">
+                <video controls autoplay="true" class="img-fluid" poster="img/wave.gif">
                   <source src="img/wave.webm" type="video/webm">
-                  <img src="img/wave.gif" class="img-fluid">
                 </video>
                 <figcaption class="mr-5">
                   (fig. 3D Wave Dynamics)
