Changed desgin affected by DOCTYPE

--- a/memo.html
+++ b/memo.html
@@ -12,7 +12,7 @@
   <body>
       <div id="particles-js"></div>
 
-      <div class="d-flex align-items-start h-100" style="background-color: rgba(255, 255, 255, 0.781); border-bottom: solid 0.5px rgba(77, 77, 77, 0.1);">
+      <div class="d-flex align-items-start" style="height: 100vh; background-color: rgba(255, 255, 255, 0.781); border-bottom: solid 0.5px rgba(77, 77, 77, 0.1);">
         
         <div class="content container-xl d-flex flex-column justify-content-between">
           
