--- a/profile.html
+++ b/profile.html
@@ -55,7 +55,7 @@
               </div>
               
               <figure style="text-align: right; color: rgb(75, 75, 75);">
-                <video controls autoplay="true" class="img-fluid" poster="img/wave.gif">
+                <video loop autoplay="true" class="img-fluid" poster="img/wave.gif">
                   <source src="img/wave.webm" type="video/webm">
                 </video>
                 <figcaption class="mr-5">
