Added links for programs

--- a/programs.html
+++ b/programs.html
@@ -50,7 +50,7 @@
               <div class="card border-info mb-2" style="width: 250px;">
                 <img src="img/amazon.png" class="card-img-top img-fluid">
                 <div class="card-body">
-                  <h5 class="card-title" style="font-weight: bold;">Amazon Price Watchdog</h5>
+                  <h5 class="card-title" style="font-weight: bold;"><a href="https://github.com/StellaContrail/Amazon-Price-Recorder">Amazon Price Watchdog</a></h5>
                   <p class="card-text">Keep an eye for your favorite products</p>
                 </div>
               </div>
@@ -58,7 +58,7 @@
               <div class="card border-info mb-2" style="width: 250px;">
                 <img src="img/beatstream.gif" class="card-img-top img-fluid">
                 <div class="card-body">
-                  <h5 class="card-title" style="font-weight: bold;">Rhythm Game</h5>
+                  <h5 class="card-title" style="font-weight: bold;"><a href="https://github.com/StellaContrail/beatstream-like-game">Rhythm Game</a></h5>
                   <p class="card-text">
                     Beatstream-like music game
                   </p>
@@ -68,7 +68,7 @@
               <div class="card border-info mb-2" style="width: 250px;">
                 <img src="img/comiket.png" class="card-img-top img-fluid">
                 <div class="card-body">
-                  <h5 class="card-title" style="font-weight: bold;">Comiket Participants Finder</h5>
+                  <h5 class="card-title" style="font-weight: bold;"><a href="https://github.com/StellaContrail/comiket-participants-finder">Comiket Participants Finder</a></h5>
                   <p class="card-text">Find Comiket participants from your followings</p>
                 </div>
               </div>
@@ -76,7 +76,7 @@
               <div class="card border-info mb-2" style="width: 250px;">
                 <img src="img/magnet.png" class="card-img-top img-fluid">
                 <div class="card-body">
-                  <h5 class="card-title" style="font-weight: bold;">Magnetization</h5>
+                  <h5 class="card-title" style="font-weight: bold;"><a href="https://github.com/StellaContrail/IsingModel">Magnetization</a></h5>
                   <p class="card-text">Study magnetization property of ferromagnetic materials using 2D/3D Ising model and XY model.</p>
                 </div>
               </div>
