--- a/profile.html
+++ b/profile.html
@@ -30,10 +30,10 @@
                     <a class="nav-link disabled" href="profile.html">Profile</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link text-primary" href="programs.html">Programs</a>
+                    <a class="nav-link text-primary" href="software.html">Software</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link text-primary" href="experiments/index.html">Experiments</a>
+                    <a class="nav-link text-primary" href="simulations/index.html">Simulations</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link text-primary" href="memo.html">備忘録</a>
@@ -48,9 +48,11 @@
                 <h1 class="display-3 mb-2">Profile</h1>
                 <img src="https://avatars3.githubusercontent.com/u/30793677" class="ml-3 mb-4">
                 <p class="lead">
-                  <span class="font-weight-bold">Language:</span> JP/English/C#/Fortran2008/C++
+                  <span class="font-weight-bold">Degree:</span> B.Sc (Physics)
                   <br>
                   <span class="font-weight-bold">Field:</span> Computational Physics
+                  <br>
+                  <span class="font-weight-bold">Language:</span> JP/English/C#/Fortran2008/C++
                 </p>
               </div>
               
