--- a/software.html
+++ b/software.html
@@ -30,10 +30,10 @@
                   <a class="nav-link text-primary" href="profile.html">Profile</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link disabled" href="programs.html">Programs</a>
+                  <a class="nav-link disabled" href="software.html">Software</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link text-primary" href="experiments/index.html">Experiments</a>
+                  <a class="nav-link text-primary" href="simulations/index.html">Simulations</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link text-primary" href="memo.html">備忘録</a>
@@ -74,10 +74,10 @@
               </div>
               
               <div class="card border-info mb-2" style="width: 250px;">
-                <img src="img/magnet.png" class="card-img-top img-fluid">
+                <img src="img/markov.png" class="card-img-top img-fluid">
                 <div class="card-body">
-                  <h5 class="card-title" style="font-weight: bold;"><a href="https://github.com/StellaContrail/IsingModel">Magnetization</a></h5>
-                  <p class="card-text">Study magnetization property of ferromagnetic materials using 2D/3D Ising model and XY model.</p>
+                  <h5 class="card-title" style="font-weight: bold;"><a href="https://github.com/StellaContrail/Markov">Markov chain</a></h5>
+                  <p class="card-text">Generate random sentences with Markov chain</p>
                 </div>
               </div>
             </div>
