--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
                 <a class="nav-link" href="profile.html">Profile</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="programs.html">Programs</a>
+                <a class="nav-link" href="software.html">Software</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="experiments/index.html">Experiments</a>
+                <a class="nav-link" href="simulations/index.html">Simulations</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="memo.html">備忘録</a>
