--- a/memo.html
+++ b/memo.html
@@ -30,10 +30,10 @@
                   <a class="nav-link text-primary" href="profile.html">Profile</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link text-primary" href="programs.html">Programs</a>
+                  <a class="nav-link text-primary" href="software.html">Software</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link text-primary" href="experiments/index.html">Experiments</a>
+                  <a class="nav-link text-primary" href="simulations/index.html">Simulations</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link disabled" href="memo.html">備忘録</a>
