--- a/software.html
+++ b/software.html
@@ -44,7 +44,7 @@
 
 
           <div class="d-flex flex-column align-items-between justify-content-between">
-            <h1 class="display-3 mt-2 mb-4">Programs</h1>
+            <h1 class="display-3 mt-2 mb-4">Software</h1>
 
             <div class="d-flex flex-wrap flex-row justify-content-around container-xl">
               <div class="card border-info mb-2" style="width: 250px;">
