--- a/memo.html
+++ b/memo.html
@@ -49,11 +49,13 @@
                 <dl class="row ml-3">
                   <dt class="col-sm-3">Mathematics</dt>
                   <dd class="col-sm-9">
-                    <a href="memo/20200710.html">[20200710] about fraction</a>
+                    <a href="memo/20200710.html">When a Common Fractional Mistake Holds (It doesn't)</a>
                   </dd>
                 
                   <dt class="col-sm-3">Physics</dt>
-                  <dd class="col-sm-9">None</dd>
+                  <dd class="col-sm-9">
+                    <a href="memo/20200905.html">多重極展開 (Multipole expansion)</a>
+                  </dd>
                 
                   <dt class="col-sm-3">Programming</dt>
                   <dd class="col-sm-9">None</dd>
