Added a link for new article

--- a/memo.html
+++ b/memo.html
@@ -55,6 +55,8 @@
                   <dt class="col-sm-3">Physics</dt>
                   <dd class="col-sm-9">
                     <a href="memo/20200905.html">多重極展開 (Multipole expansion)</a>
+                    <br>
+                    <a href="memo/20200907.html">慣性質量と重力質量について (Inertial mass and Gravitational mass)</a>
                   </dd>
                 
                   <dt class="col-sm-3">Programming</dt>
