--- a/index.html
+++ b/index.html
@@ -3,37 +3,33 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>Portfolio</title>
-        <script src="lib/jquery/jquery-3.4.1.min.js"></script>
-        <script src="lib/bootstrap-4.4.1/js/bootstrap.min.js"></script>
-        <link rel="stylesheet" href="lib/bootstrap-4.4.1/css/bootstrap.min.css">
-        <link rel="stylesheet" href="css/style.css">
+        <title>Top</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div id="particles-js"></div>
-
-        <div class="d-flex flex-row justify-content-center align-items-end" style="height: 75vh; background-color: rgba(255, 255, 255, 0.781); border-bottom: solid 0.5px rgba(77, 77, 77, 0.1);">
-          <div class="ml-5 mr-5 mb-5">
-            <h1 class="display-3">Contrail</h1>
-            <p class="lead mb-4">Grad Student studying Physics & Mathematics.</p>
-            <ul class="nav justify-content-start">
-              <li class="nav-item">
-                <a class="nav-link" href="profile.html">Profile</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="software.html">Software</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="simulations/index.html">Simulations</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="memo.html">備忘録</a>
-              </li>
-            </ul>
-          </div>
-          <div style="width: 35vw;"></div>  
+        <div id="particles-js" class="parent">
+          <div class="overlay-top">
+            <div class="content-top">
+              <span class="title">Contrail</span>
+                <span class="subtitle">Grad Student studying Physics & Mathematics.</span>
+                <ul class="nav">
+                  <li>
+                    <a href="profile.html">Profile</a>
+                  </li>
+                  <li>
+                    <a href="software.html">Software</a>
+                  </li>
+                  <li>
+                    <a href="simulations/index.html">Simulations</a>
+                  </li>
+                  <li>
+                    <a href="memo.html">備忘録</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
         </div>
-
+        
         <script src="lib/particlejs/particles.js"></script>
         <script src="lib/particlejs/app.js"></script>
     </body>
