--- a/simulations/brownian_motion/index.html
+++ b/simulations/brownian_motion/index.html
@@ -4,11 +4,8 @@
         <meta charset="utf-8">
         <title>Brownian motion</title>
         <script src="../../lib/plotly/plotly_1.53.0.js"></script>
-        <script src="../../lib/jquery/jquery-3.4.1.min.js"></script>
-        <script src="../../lib/bootstrap-4.4.1/js/bootstrap.min.js"></script>
         <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
         <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
-        <link rel="stylesheet" href="../../lib/bootstrap-4.4.1/css/bootstrap.min.css">
         <script>
             // Constant Values
             var gamma = 0.06;
@@ -104,22 +101,18 @@
         </script>
     </head>
     <body onload="start()">
-        <div style="min-height: 100vh; display: flex; align-items: center;">
-            <div class="container">
-                <div class="row">
-                    <div class="col text-center">
-                        <h1>Brownian Motion</h1>
-                        $$ \frac{dX(t)}{dt} = -\gamma X(t) + R(t) $$
-                        where \(R(t) dt\) is Gaussian process with variance of \(Ddt\)
-                    </div>
+        <div style="min-height: 100vh; width: 100vw; display: flex; flex-direction: row; justify-content: center; align-items: center;">
+            <div class="dispay: flex; flex-direction: column; width: 100vw;">
+                <div style="text-align: center;">
+                    <h1>Brownian Motion</h1>
+                    $$ \frac{dX(t)}{dt} = -\gamma X(t) + R(t) $$
+                    where \(R(t) dt\) is Gaussian process with variance of \(Ddt\)
                 </div>
-                <div class="row">
-                    <div class="col text-center">
-                        <div id="graph" style="border: 1px solid lightgray;"></div>
-                        \(\gamma:\) <input type="number" value="0.06" id="gammaVal">
-                        <input type="button" onclick="rerun()" value="Rerun">
-                        <input type="button" onclick="stop()" value="Stop">
-                    </div>
+                <div style="width: 1200px; text-align: center;">
+                    <div id="graph" style="border: 1px solid lightgray;"></div>
+                    \(\gamma:\) <input type="number" value="0.06" id="gammaVal">
+                    <input type="button" onclick="rerun()" value="Rerun">
+                    <input type="button" onclick="stop()" value="Stop">
                 </div>
             </div>
         </div>
