--- a/simulations/deformed_nucleus/general.html
+++ b/simulations/deformed_nucleus/general.html
@@ -4,11 +4,8 @@
         <meta charset="utf-8">
         <title>Deformed Nucleus</title>
         <script src="../../lib/plotly/plotly_1.53.0.js"></script>
-        <script src="../../lib/jquery/jquery-3.4.1.min.js"></script>
-        <script src="../../lib/bootstrap-4.4.1/js/bootstrap.min.js"></script>
         <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
         <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
-        <link rel="stylesheet" href="../../lib/bootstrap-4.4.1/css/bootstrap.min.css">
         <script>
             const N = 35;   // dimension
             const dTheta = 2 * Math.PI / N; // angle step
@@ -98,15 +95,15 @@
         </script>
     </head>
     <body onload="setElementReferences(); initialize();">
-        <div style="min-height: 100vh; display: flex; align-items: center;"><div class="container">
-            <div class="row text-center">
-                <div class="col">
+        <div style="min-height: 100vh; display: flex; align-items: center;"><div style="width: 100vw; display: flex; flex-direction: column; justify-content: center; align-items: center;">
+            <div style="text-align: center;">
+                <div>
                     <h1>Deformed nucleus</h1>
                     $$ R(\theta, \phi) = R_0 \left(1 + \alpha_{00} + \sum^\infty_{\lambda=1} \sum^\lambda_{\mu=-\lambda} \alpha^*_{\lambda \mu} Y_{\lambda \mu} (\theta, \phi)\right)$$
                 </div>
             </div>
-            <div class="row" style="align-items: center;">
-            <div id="graph" class="col" style="border: 1px solid lightgray;"></div>
+            <div style="align-items: center; display: flex; flex-direction: row; justify-content: space-between; width: 50vw;">
+            <div id="graph" style="border: 1px solid lightgray;"></div>
             <div class="col">
                 <form>
                     <fieldset>
