updated my academic degree

--- a/profile.html
+++ b/profile.html
@@ -42,7 +42,7 @@
                     </tr>
                     <tr>
                       <td class="label">Degree</td>
-                      <td>B.Sc (Physics)</td>
+                      <td>M.Sc (Physics)</td>
                     </tr>
                     <tr>
                       <td class="label">Language</td>
