--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
           <div class="overlay-top">
             <div class="content-top">
               <span class="title">Contrail</span>
-                <span class="subtitle">Grad Student studying Physics & Mathematics.</span>
+                <span class="subtitle">Physics & Mathematics, Computer Science.</span>
                 <ul class="nav">
                   <li>
-                    <a href="profile.html">Profile</a>
+                    <a href="./index.html">Top</a>
                   </li>
                   <li>
-                    <a href="software.html">Software</a>
+                    <a href="./pages/tools.html">Tools</a>
                   </li>
                   <li>
-                    <a href="simulations/index.html">Simulations</a>
+                    <a href="./pages/simulations/index.html">Simulations</a>
                   </li>
                   <li>
                     <a href="memo.html">備忘録</a>
