--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <a href="./pages/simulations/index.html">Simulations</a>
                   </li>
                   <li>
-                    <a href="memo.html">備忘録</a>
+                    <a href="https://stellacontrail.github.io/memo/">備忘録</a>
                   </li>
                 </ul>
               </div>
