--- a/pages/simulations/index.html
+++ b/pages/simulations/index.html
@@ -32,7 +32,7 @@
                 <a class="nav-link disabled" href="simulations/index.html">Simulations</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link link-primary" href="memo.html">備忘録</a>
+                <a class="nav-link link-primary" href="https://stellacontrail.github.io/memo/">備忘録</a>
               </li>
             </ul>
           </div>
