modified particle effect and simulation page

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
         </div>
         
-        <script src="lib/particlejs/particles.js"></script>
-        <script src="lib/particlejs/app.js"></script>
+        <script src="./pages/lib/particlejs/particles.js"></script>
+        <script src="./pages/lib/particlejs/app.js"></script>
     </body>
 </html>
