--- a/pages/simulations/index.html
+++ b/pages/simulations/index.html
@@ -56,7 +56,7 @@
           </div>
 
           <div>
-            <h3><a class="link-underline link-underline-opacity-0" href="https://github.com/StellaContrail/CollisionOfBlocks">円周率プール</a></h3>
+            <h3><a class="link-underline link-underline-opacity-0" href="https://stellacontrail.github.io/playing-pool/">積み木で円周率を計算</a></h3>
             <img class="img-fluid img-thumbnail" src="img/collision.png" style="max-width: 250px; max-height: 135px;">
             <p>
               <a class="text-decoration-none" href="https://www.maths.tcd.ie/~lebed/Galperin.%20Playing%20pool%20with%20pi.pdf">G.Galperin (2003)</a> の "Playing Pool with PI" を可視化したもの。
